<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Mnemosyne</string>
    <string name="action_save">Enregistrer</string>
    <string name="hint_catalogue_list">Liste des catalogues</string>
    <string name="hint_catalogue">Catalogue</string>
    <string name="hint_dictionary">Dictionnaire</string>
    <string name="action_create_item">Creer un item</string>
    <string name="action_remove_item">Supprimer</string>

    <!-- Catalogue -->
    <string name="action_cat_create">Creer un catalogue</string>
    <string name="hint_cat_fillIn_name">Nom du catalogue</string>
    <string name="hint_cat_fillIn_desc">Description du catalogue</string>

    <!-- Dictionary -->
    <string name="action_dict_create">Creer un dictionnaire</string>
    <string name="hint_dict_fillIn_name">Nom du dictionnaire</string>
    <string name="hint_dict_fillIn_desc">Description du dictionnaire</string>

    <!-- Word -->
    <string name="hint_word_fillIn_word">Mot a definir</string>
    <string name="hint_word_fillIn_definition">Definition</string>
    <string name="hint_word">Word</string>
    <string name="hint_next_date">Prochaine revision</string>
    <string name="hint_last_date">Dernière révision</string>

    <!-- Memory manager -->
    <string name="hint_remember">Je maitrise, aucun probleme</string>
    <string name="hint_almost_remember">J\'ai de bons restes</string>
    <string name="hint_almost_forgotten">J\'ai du mal a me souvenir</string>
    <string name="hint_forgot">C\'est le neant</string>
    <string name="hint_mem_add_date">Mot ajoute le </string>
    <string name="hint_mem_memory_phase">Phase de memorisation </string>
    <string name="hint_mem_beg_mp">Date de demarrage de la phase </string>
    <string name="hint_mem_days_between">Nombre de jours entre 2 revisions </string>
    <string name="action_raise_alert">Verifier les mots a reviser</string>
    <string name="hint_raised_message">Revision du jour</string>
    


    <!-- Mnemosyne description -->
    <string name="mnemosyne_description">Mnemosyne est une application dont le but est d\'aider à mémoriser de façon efficace et sur le long terme un ou des ensembles de mots.
        Nous avons tous accès a différents types de mémoire. La mémoire qui nous intéresse est la mémoire \'sémantique\', une mémoire à long terme (plus d\'informations ici).
        Pour parvenir à stocker ce que nous voulons dans cette mémoire, nous devons suivre un processus de mémorisation. C\'est la qu\'intervient Mnemosyne, qui vous force à suivre
        ce processus.
    </string>
    <string name="hint_todayslist">Revisions</string>


</resources>
