<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mnemo.pietro.mnemosyne.CreateCatalogueActivity">


    <EditText
        android:id="@+id/name_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_cat_fillIn_name"
        />

    <EditText
        android:id="@+id/desc_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_cat_fillIn_desc"
        />

    <Button
        android:onClick="save_catalogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/action_save"/>

</LinearLayout>
