<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/hint_word_create"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="0"
        />

    <TextView
        android:text="@string/hint_word_fillIn_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1" />

    <EditText
        android:id="@+id/word_name"
        android:hint="@string/hint_word_fillIn_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2" />

    <TextView
        android:hint="@string/hint_word_fillIn_definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1" />

    <EditText
        android:id="@+id/word_definition"
        android:hint="@string/hint_word_fillIn_definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2" />

    <Button
        android:text="@string/action_save"
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_row="2"
        android:layout_column="3" />

</GridLayout>

